force-app/main/default/objects/Scheme_Applicability__c/Scheme_Applicability__c.object-meta.xml
<CustomObject>
    <label>Scheme Applicability</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Scheme Applicability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheme Applicabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>