force-app/main/default/objects/Scheme_Applicability__c/fields/Brand_Key__c.field-meta.xml
<CustomField>
    <fullName>Brand_Key__c</fullName>
    <description>Normalised (upper-cased, trimmed, whitespace-collapsed) copy of Product_Brand__c, set automatically by SchemeApplicabilityTrigger. Used for matching against cart line brands so &quot;AMUL&quot; and &quot;Amul &quot; are treated as the same brand.</description>
    <label>Brand Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>