force-app/main/default/objects/Scheme_Applicability__c/validationRules/Brand_required_for_Entity_Type_Brand.validationRule-meta.xml
<ValidationRule>
    <fullName>Brand_required_for_Entity_Type_Brand</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Entity_Type__c, &apos;Brand&apos;),
    OR(ISBLANK(Product_Brand__c), NOT(ISBLANK(Product__c)))
  )</errorConditionFormula>
    <errorMessage>Entity Type is Brand — enter a Product Brand and leave Product blank.</errorMessage>
</ValidationRule>