force-app/main/default/objects/Scheme_Applicability__c/validationRules/Product_required_for_Entity_Type_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_required_for_Entity_Type_Product</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Entity_Type__c, &apos;Product&apos;),
    OR(ISBLANK(Product__c), NOT(ISBLANK(Product_Brand__c)))
  )</errorConditionFormula>
    <errorMessage>Entity Type is Product — select a Product and leave Product Brand blank.</errorMessage>
</ValidationRule>